# fault-lib

./: .bazelrc  .gitignore  .ruff.toml  .yamlfmt  BUILD  Cargo.toml  MODULE.bazel  README.md  REUSE.toml  clippy.toml  project_config.bzl  rust-toolchain.toml  rustfmt.toml
.github/workflows/: audit.yml  build_test.yml  copyright.yml  coverage.yml  format.yml  lint.yml  miri.yml  pr-checks.yml  pre-commit.yaml
docs/: conf.py  index.rst
docs/design/: design.md
docs/drawings/: lib_arch.drawio
docs/examples/: hvac_component_design_reference.rs
docs/puml/: enable_condition_ntf.puml  fault_catalog.puml  generate_svg.sh  local_enable_condition_ntf.puml  new_enable_condition.puml  new_fault.puml  query_clear.puml
examples/: BUILD
patches/: BUILD  iceoryx2_bb_derive_macros_readme.patch
src/common/: BUILD  Cargo.toml
src/common/src/: catalog.rs  config.rs  debounce.rs  enabling_condition.rs  fault.rs  ids.rs  ipc_service_name.rs  ipc_service_type.rs  lib.rs  query_protocol.rs  sink_error.rs  types.rs
src/dfm_bin/: Cargo.toml
src/dfm_bin/src/: main.rs
src/dfm_lib/: BUILD  Cargo.toml
src/dfm_lib/examples/: dfm.rs  sovd_fault_manager.rs
src/dfm_lib/src/: aging_manager.rs  dfm_test_utils.rs  diagnostic_fault_manager.rs  enabling_condition_registry.rs  fault_catalog_registry.rs  fault_lib_communicator.rs  fault_record_processor.rs  lib.rs  operation_cycle.rs  query_api.rs  query_conversion.rs  query_ipc.rs  query_server.rs  sovd_fault_manager.rs  sovd_fault_storage.rs  transport.rs
src/fault_lib/: BUILD  Cargo.toml
src/fault_lib/examples/: catalog_and_reporter.rs  config_1.json  tst_app.rs
src/fault_lib/src/: api.rs  catalog.rs  enabling_condition.rs  fault_manager_sink.rs  ipc_worker.rs  lib.rs  reporter.rs  sink.rs  test_utils.rs  utils.rs
src/fault_lib/tests/data/: hvac_fault_catalog.json  ivi_fault_catalog.json
src/xtask/: Cargo.toml
src/xtask/src/: main.rs
tests/: fault_catalog.json
tests/integration/: BUILD  Cargo.toml
tests/integration/src/: helpers.rs  lib.rs  test_body_catalog_e2e.rs  test_boundary_values.rs  test_concurrent_access.rs  test_debounce_aging_cycles_ec.rs  test_error_paths.rs  test_ipc_query.rs  test_json_catalog.rs  test_lifecycle_transitions.rs  test_multi_catalog.rs  test_persistent_storage.rs  test_report_and_query.rs
