[workspace]
resolver = "2"

members = [
    "src/common",
    "src/dfm_lib",
    "src/fault_lib",
    "src/xtask",
    "tests/integration",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "LICENSE"
authors = ["S-CORE Contributors"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
cast_possible_truncation = "warn"
arithmetic_side_effects = "warn"
new_without_default = "allow"

[workspace.dependencies]
env_logger = "0.11.8"
iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "eba5da4b8d8cb03bccf1394d88a05e31f58838dc" }
iceoryx2-bb-container = { git = "https://github.com/eclipse-iceoryx/iceoryx2.git", rev = "eba5da4b8d8cb03bccf1394d88a05e31f58838dc" }
log = "0.4.22"
mockall = "0.13.1"
serial_test = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.17"
xtask = { path = "src/xtask" }
