# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "common"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
iceoryx2.workspace = true
iceoryx2-bb-container.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
