# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "dfm_lib"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
iceoryx2.workspace = true
iceoryx2-bb-container.workspace = true
thiserror.workspace = true
tracing.workspace = true
rust_kvs = { git = "https://github.com/eclipse-score/persistency.git", branch = "main" }
serde_json.workspace = true

[dev-dependencies]
mockall.workspace = true
serial_test.workspace = true
tempfile = "3.20"
tracing-subscriber.workspace = true
