# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "integration_tests"
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
common = { path = "../../src/common" }
dfm_lib = { path = "../../src/dfm_lib" }
fault_lib = { path = "../../src/fault_lib" }
tempfile = "3.20"
tracing.workspace = true
tracing-subscriber.workspace = true
serial_test.workspace = true
serde_json.workspace = true
